login page overflow resolved

--- a/src/pages/User/user.css
+++ b/src/pages/User/user.css
@@ -21,6 +21,14 @@
     max-width: 500px;
     background-image: linear-gradient(45deg,rgb(71, 44, 205), rgb(132, 54, 235), rgb(71, 44, 205));
     color: white;
+    overflow-y: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.work-list-container > .works-container > .todos::-webkit-scrollbar {
+    display: none;
 }
 
 .user > .form-container > h1 {
